# Algrim_movingdetect_cpp

./: CMakeLists.txt  README.md  estimation.cpp  optical.cpp  vibe.cpp  vibe.kdev4
lib/: estimation.h  optical.h
